Ajuste final atividade 7

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div id="component1">  
-  <!--app-btn-new (functionBtn)="alert('TESTE')"></app-btn-new-->
+<div id="component1">
+  <app-btn-new></app-btn-new>
 </div>  
 <div id="component2">
   <app-loader></app-loader>
