--- a/src/app/components/btn-new/btn-new.component.html
+++ b/src/app/components/btn-new/btn-new.component.html
@@ -1,4 +1,4 @@
 <button (click)="function()" class="btn btn-xs btn-success" [ngClass]="class" [title]="toolTip" [disabled]="disabled">
-  <i class="fas fa-plus"></i>
+  <i class="bi bi-plus-lg"></i>
   <span *ngIf="label" [innerHTML]="label"></span>
 </button>
