--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,106 +3,111 @@
 	<span style="margin-left: 10px">Carregando...</span>
 </div>
 
-<div class="card" [hidden]="loading">
+<div class="container" [hidden]="loading">
 	<div class="d-flex justify-content-between">
 		<h4>Usuarios</h4>
 	</div>
 
 	<ul class="nav nav-tabs">
 		<li class="nav-item">
-			<a class="nav-link cursor-pointer" [ngClass]="{'active': tabSelected == 'CON'}" (click)="tabSelected = 'CON'">Consulta</a>
+			<a class="nav-link cursor-pointer" [ngClass]="{'active': tabSelected == 'CON'}" (click)="cancelUser()">Consulta</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link cursor-pointer" [ngClass]="{'active': tabSelected == 'CAD'}" (click)="tabSelected = 'CAD'">Cadastro</a>
+			<a class="nav-link cursor-pointer" [ngClass]="{'active': tabSelected == 'CAD'}" (click)="newUser()">Cadastro</a>
 		</li>
 	</ul>
 
-	<div style="height: 400px; overflow: auto" *ngIf="tabSelected == 'CON'">
-		<table class="table table-sm table-hover
-            col-sm-12">
-			<thead>
-				<tr>
-					<th class="col-sm-2">
-						<button class="btn btn-sm btn-primary">
-							Novo
-						</button>
-					</th>
-					<th class="col-sm-2">
-						Nome
-						<input type="text" class="form-control form-control-sm" [(ngModel)]="filter.name" (ngModelChange)="filtering(filter)" placeholder="Pesquisar..." />
-					</th>
-					<th class="col-sm-2">
-						Email
-						<input type="text" class="form-control form-control-sm" [(ngModel)]="filter.email" (ngModelChange)="filtering(filter)" placeholder="Pesquisar..." />
-					</th>
-					<th class="col-sm-2">
-						Telefone
-						<input type="text" class="form-control form-control-sm" [(ngModel)]="filter.fone" (ngModelChange)="filtering(filter)" placeholder="Pesquisar..." />
-					</th>
-					<th class="col-sm-1">
-						Situação
-						<input type="text" class="form-control form-control-sm" [(ngModel)]="filter.status" (ngModelChange)="filtering(filter)" placeholder="Pesquisar..." />
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<!--tr class="align-middle" *ngFor="let u of usuariosFiltrados.slice(
-                    paginaUsuarioConsulta * paginaUsuarioConsultaTamanho, (paginaUsuarioConsulta + 1) * paginaUsuarioConsultaTamanho );
-                    index as i">
-                    <td>
-                        <button class="btn btn-sm btn-success me-1" (click)="alterarUsuario(u)">
-                            Editar
-                        </button>
-                    </td>
-                    <td>{{ u.nome }}</td>
-                    <td>{{ u.email }}</td>
-                    <td>{{ u.telefone }}</td>
-                    <td>{{ u.status == "A" ? "Ativo" : "Inativo" }}</td>
-                </tr-->
-			</tbody>
-		</table>
+	<div class="container-fluid" *ngIf="tabSelected == 'CON'">
+		<div class="height-table">
+			<table class="table table-sm table-hover col-sm-12">
+				<thead>
+					<tr>
+						<th class="col-sm-2">
+							<button class="btn btn-sm btn-primary" (click)="newUser()">
+								Novo
+							</button>
+						</th>
+						<th class="col-sm-2">
+							Nome
+							<input type="text" class="form-control form-control-sm" [(ngModel)]="formFilter.name" placeholder="Pesquisar..." />
+						</th>
+						<th class="col-sm-2">
+							Email
+							<input type="text" class="form-control form-control-sm" [(ngModel)]="formFilter.email" placeholder="Pesquisar..." />
+						</th>
+						<th class="col-sm-2">
+							Telefone
+							<input type="text" class="form-control form-control-sm" [(ngModel)]="formFilter.fone" placeholder="Pesquisar..." />
+						</th>
+						<th class="col-sm-1">
+							Situação
+							<input type="text" class="form-control form-control-sm" [(ngModel)]="formFilter.status" placeholder="Pesquisar..." />
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr class="align-middle" *ngFor="let u of filtering(); index as i">
+						<td>
+							<button class="btn btn-sm btn-success me-1" (click)="alterUser(u)">
+								Editar
+							</button>
+						</td>
+						<td>{{ u.name }}</td>
+						<td>{{ u.email }}</td>
+						<td>{{ u.fone }}</td>
+						<td>{{ u.status == "A" ? "Ativo" : "Inativo" }}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="flex-center">
+			<ngb-pagination [collectionSize]="totalItens" [(page)]="page" [pageSize]="pageSize" [maxSize]="5" [boundaryLinks]="true" [ellipses]="false"></ngb-pagination>
+		</div>
 	</div>
-	<div style="height: 400px; overflow: auto" *ngIf="tabSelected == 'CAD'">
-
-		<div class="col-sm-12">
-			<div class="mb-3 col">
+	<div class="container-fluid" *ngIf="tabSelected == 'CAD'">
+		<div class="row">
+			<div class="mb-3 col-md-6 col-sm-12">
 				<label for="nameUser" class="form-label">Nome</label>
-				<input type="text" class="form-control form-control-sm" id="nameUser">
+				<input type="text" class="form-control form-control-sm" id="nameUser" [(ngModel)]="form.name">
 			</div>
-			<div class="mb-3 col">
+			<div class="mb-3 col-md-6 col-sm-12">
 				<label for="emailUser" class="form-label">Email</label>
-				<input type="email" class="form-control form-control-sm" id="emailUser">
+				<input type="email" class="form-control form-control-sm" id="emailUser" [(ngModel)]="form.email">
 			</div>
 		</div>
-		<div class="col-sm-12">
-			<div class="mb-3 col">
+		<div class="row">
+			<div class="mb-3 col-md-6 col-sm-12">
 				<label for="foneUser" class="form-label">Telefone</label>
-				<input type="text" class="form-control form-control-sm" id="foneUser">
+				<input type="text" class="form-control form-control-sm" id="foneUser" [(ngModel)]="form.fone" [mask]="'(00) 00000-0000'" maxLength="15" minLength="14">
 			</div>
-			<div class="mb-3 col">
+			<div class="mb-3 col-md-6 col-sm-12">
 				<label for="statusUser" class="form-label">Status</label>
-				<select class="form-control form-control-sm" id="statusUser">
+				<select class="form-control form-control-sm" id="statusUser" [(ngModel)]="form.status">
+					<option value="A">Ativo</option>
+					<option value="I">Inativo</option>
 				</select>
 			</div>
 		</div>
-		<div class="col-sm-12">
-			<div class="mb-3 col">
+		<div class="row">
+			<div class="mb-3 col-md-4 col-sm-12">
 				<label for="loginUser" class="form-label">Usuário</label>
-				<input type="text" class="form-control form-control-sm" id="loginUser">
+				<input type="text" class="form-control form-control-sm" id="loginUser" [(ngModel)]="form.login">
 			</div>
-			<div class="mb-3 col">
+			<div class="mb-3 col-md-4 col-sm-12">
 				<label for="passUser" class="form-label">Senha</label>
-				<input type="password" class="form-control form-control-sm" id="passUser">
+				<input type="password" class="form-control form-control-sm" id="passUser" [(ngModel)]="form.password">
 			</div>
-			<div class="mb-3 col">
+			<div class="mb-3 col-md-4 col-sm-12">
 				<label for="typeUser" class="form-label">Tipo de conta</label>
-				<select class="form-control form-control-sm" id="typeUser">
+				<select class="form-control form-control-sm" id="typeUser" [(ngModel)]="form.type">
+					<option value="A">Administrador</option>
+					<option value="O">Operacional</option>
 				</select>
 			</div>
 		</div>
-		<div class="col-sm-12">
-			<button type="button" class="btn btn-primary">Confirmar</button>
-			<button type="button" class="btn btn-danger">Cancelar</button>
+		<div class="row">
+			<button type="button" class="btn btn-primary btn-register" (click)="confirmUser()" [disabled]="!formValid()">Confirmar</button>
+			<button type="button" class="btn btn-danger btn-register" (click)="cancelUser()">Cancelar</button>
 		</div>
 
 	</div>
