Criação de componentes para trabalhar com rotas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,16 +9,16 @@
                 <a class="nav-link" routerLink="/home/users">Usuários</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="a">Clientes</a>
+                <a class="nav-link" routerLink="/home/customers">Clientes</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="a">Equipamentos</a>
+                <a class="nav-link" routerLink="/home/equipaments">Equipamentos</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="a">Eventos</a>
+                <a class="nav-link" routerLink="/home/events">Eventos</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="a">OS</a>
+                <a class="nav-link" routerLink="/home/os">OS</a>
             </li>
         </ul>
     </div>
