--- a/src/app/components/btn/btn.component.html
+++ b/src/app/components/btn/btn.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn btn-register" [ngClass]="classes" [title]="toolTip" [disabled]="disable">
+<button [type]="type" class="btn btn btn-register" [ngClass]="classes" [title]="toolTip" [disabled]="disabled">
     <span *ngIf="label" [innerHTML]="label"></span>
 </button>
