--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,1 +1,9 @@
-<p>customers works!</p>
+<div class="container">
+	<div class="d-flex justify-content-between">
+		<h4>Clientes</h4>
+	</div>
+	<div class="container-fluid">
+		<router-outlet></router-outlet>
+	</div>
+</div>
+<app-alert></app-alert>
