--- a/src/app/user-post/user-post.component.html
+++ b/src/app/user-post/user-post.component.html
@@ -1,45 +1,60 @@
-<div class="row">
-    <div class="mb-3 col-md-6 col-sm-12">
-        <label for="nameUser" class="form-label">Nome</label>
-        <input type="text" class="form-control form-control-sm" id="nameUser" [(ngModel)]="form.name">
+<app-loading [hidden]="!loading"></app-loading>
+<form [hidden]="loading" class="col s12" #form="ngForm" (submit)="confirmUser()">
+    <div class="row">
+        <div class="mb-3 col-md-6 col-sm-12">
+            <label for="input-name" class="form-label">Nome</label>
+            <input type="text" class="form-control form-control-sm" id="input-name" name="input-name" [(ngModel)]="this.user.name" #name="ngModel" required>
+        </div>
+        <div class="mb-3 col-md-6 col-sm-12">
+            <label for="input-email" class="form-label">Email</label>
+            <input type="email" class="form-control form-control-sm" id="input-email" name="input-email" [(ngModel)]="this.user.email" #email="ngModel" required>
+        </div>
     </div>
-    <div class="mb-3 col-md-6 col-sm-12">
-        <label for="emailUser" class="form-label">Email</label>
-        <input type="email" class="form-control form-control-sm" id="emailUser" [(ngModel)]="form.email">
+    <div class="row">
+        <div class="mb-3 col-md-6 col-sm-12">
+            <label for="input-fone" class="form-label">Telefone</label>
+            <input type="text" class="form-control form-control-sm" id="input-fone" name="input-fone" [(ngModel)]="this.user.fone" #fone="ngModel" [mask]="'(00) 00000-0000'" maxLength="15" minLength="14" required>
+        </div>
+        <div class="mb-3 col-md-6 col-sm-12">
+            <label for="input-status" class="form-label">Status</label>
+            <select class="form-control form-control-sm" id="input-status" name="input-status" [(ngModel)]="this.user.status" #status="ngModel" required>
+                <option value="A">Ativo</option>
+                <option value="I">Inativo</option>
+            </select>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="mb-3 col-md-6 col-sm-12">
-        <label for="foneUser" class="form-label">Telefone</label>
-        <input type="text" class="form-control form-control-sm" id="foneUser" [(ngModel)]="form.fone" [mask]="'(00) 00000-0000'" maxLength="15" minLength="14">
+    <div class="row">
+        <div class="mb-3 col-md-4 col-sm-12">
+            <label for="input-login" class="form-label">Usuário</label>
+            <input type="text" class="form-control form-control-sm" id="input-login" name="input-login" [(ngModel)]="this.user.login" #login="ngModel" required>
+        </div>
+        <div class="mb-3 col-md-4 col-sm-12">
+            <label for="input-password" class="form-label">Senha</label>
+            <input 
+                type="password" 
+                class="form-control form-control-sm" 
+                id="input-password" 
+                name="input-password" 
+                [(ngModel)]="this.user.password" 
+                pattern="^[a-zA-Z0-9_@#\\&\\$]{6,18}$"
+                #password="ngModel" 
+                required>
+        </div>
+        <div class="mb-3 col-md-4 col-sm-12">
+            <label for="input-type" class="form-label">Tipo de conta</label>
+            <select class="form-control form-control-sm" id="input-type" name="input-type" [(ngModel)]="this.user.type" #type="ngModel" required>
+                <option value="A">Administrador</option>
+                <option value="O">Operacional</option>
+            </select>
+        </div>
     </div>
-    <div class="mb-3 col-md-6 col-sm-12">
-        <label for="statusUser" class="form-label">Status</label>
-        <select class="form-control form-control-sm" id="statusUser" [(ngModel)]="form.status">
-            <option value="A">Ativo</option>
-            <option value="I">Inativo</option>
-        </select>
+    <div>
+        <app-btn classes="btn-success" type="submit" label="Confirmar" [disabled]=!form.valid></app-btn>
+        <app-btn classes="btn-danger" (click)="cancelUser()" label="Cancelar"></app-btn>
     </div>
-</div>
-<div class="row">
-    <div class="mb-3 col-md-4 col-sm-12">
-        <label for="loginUser" class="form-label">Usuário</label>
-        <input type="text" class="form-control form-control-sm" id="loginUser" [(ngModel)]="form.login">
+    
+    <div class="error-message" [hidden]="password.valid || password.untouched">
+        Por favor, nos informe a sua senha com pelo menos 6 caracteres!
     </div>
-    <div class="mb-3 col-md-4 col-sm-12">
-        <label for="passUser" class="form-label">Senha</label>
-        <input type="password" class="form-control form-control-sm" id="passUser" [(ngModel)]="form.password">
-    </div>
-    <div class="mb-3 col-md-4 col-sm-12">
-        <label for="typeUser" class="form-label">Tipo de conta</label>
-        <select class="form-control form-control-sm" id="typeUser" [(ngModel)]="form.type">
-            <option value="A">Administrador</option>
-            <option value="O">Operacional</option>
-        </select>
-    </div>
-</div>
-<div>
-    <app-btn classes="btn-success"  (click)="confirmUser()" [disable]=!formValid() label="Confirmar"></app-btn>
-    <app-btn classes="btn-danger" (click)="cancelUser()" label="Cancelar"></app-btn>
-</div>
+</form>
 <app-alert></app-alert>
