--- a/src/app/customer-post/customer-post.component.html
+++ b/src/app/customer-post/customer-post.component.html
@@ -32,6 +32,7 @@
                 name="input-cpfCnpj" 
                 [(ngModel)]="this.customer.cpfCnpj" 
                 mask="CPF_CNPJ"
+                [dropSpecialCharacters]="false"
                 #cpfCnpj="ngModel" 
                 required>
         </div>
@@ -105,6 +106,11 @@
             </select>
         </div>
     </div>
+
+    <div class="error-message" [hidden]="cpfCnpj.valid || cpfCnpj.untouched">
+        Por favor, informe um CPF/CNPJ.
+    </div>
+
     <div>
         <app-btn classes="btn-success" type="submit" label="Confirmar" [disabled]=!form.valid></app-btn>
         <app-btn classes="btn-danger" (click)="cancelCustomer()" label="Cancelar"></app-btn>
