Inclusão de novos componentes

--- a/src/app/event-post/event-post.component.html
+++ b/src/app/event-post/event-post.component.html
@@ -1,1 +1,23 @@
-<p>event-post works!</p>
+<app-loading [hidden]="!loading"></app-loading>
+<form [hidden]="loading" class="col s12" #form="ngForm" (submit)="confirmEvent()">
+    <div class="row">
+        <div class="mb-3 col-md-4 col-sm-12">
+            <label for="input-name" class="form-label">Nome</label>
+            <input type="text" class="form-control form-control-sm" id="input-name" name="input-name" [(ngModel)]="this.event.description" #name="ngModel" required>
+        </div>
+        <div class="mb-3 col-md-4 col-sm-12">
+            <label for="input-status" class="form-label">Status</label>
+            <select class="form-control form-control-sm" id="input-status" name="input-status" [(ngModel)]="this.event.status" #status="ngModel" required>
+                <option value="A">Ativo</option>
+                <option value="I">Inativo</option>
+            </select>
+        </div>
+    </div>
+
+    <div>
+        <app-btn classes="btn-success" type="submit" label="Confirmar" [disabled]=!form.valid></app-btn>
+        <app-btn classes="btn-danger" (click)="cancelEvent()" label="Cancelar"></app-btn>
+    </div>
+
+</form>
+<app-alert></app-alert>
