--- a/src/app/os/os.component.html
+++ b/src/app/os/os.component.html
@@ -1,1 +1,9 @@
-<p>os works!</p>
+<div class="container">
+    <div class="d-flex justify-content-between">
+        <h4>OS</h4>
+    </div>
+    <div class="container-fluid">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<app-alert></app-alert>
