--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,6 +20,9 @@
             <li class="nav-item active">
                 <a class="nav-link" routerLink="/home/os">OS</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" (click)="session.exitSession()">Sair</a>
+            </li>
         </ul>
     </div>
 </nav>
