--- a/src/app/os-post/os-post.component.html
+++ b/src/app/os-post/os-post.component.html
@@ -84,7 +84,7 @@
         <thead>
             <tr>
                 <th class="col-sm-2">
-                    <button class="btn btn-sm btn-primary" (click)="newDay()">
+                    <button class="btn btn-sm btn-primary" (click)="newDay()" [disabled]=!form.valid>
                         Novo
                     </button>
                 </th>
